Mon Jul 13 13:40:17 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/man.c (options, parse_opt): New --no-subpages option.
	  (main): Try pairing up manual page names with hyphens unless
	  --no-subpages was given.
	* ma/man1/man.man1 (SYNOPSIS, Finding manual pages): Document
	  --no-subpages.
	* docs/NEWS: Document this.

Mon Jul 13 01:17:41 BST 2009  Colin Watson  <cjwatson@debian.org>

	* README (Copyright and licensing): Update copyright years.

Mon Jul 13 00:48:32 BST 2009  Colin Watson  <cjwatson@debian.org>

	* src/encodings.c (get_less_charset, get_jless_charset): Cope with
	  locale_charset being NULL; loosely based on a patch posted to
	  mingw-msys by Mark Junker
	  (http://osdir.com/ml/gnu.mingw.msys/2005-06/msg00012.html).

Sun Jun 28 17:56:49 BST 2009  Colin Watson  <cjwatson@debian.org>

	Don't create unnecessary database directories (Debian bug #472919).

	* src/check_mandirs.c (testmandirs): Add catpath and create
	  arguments. Create the database when it first seems to be needed.
	  Use mkcatdirs rather than make_database_directory.
	  (make_database_directory): Remove.
	  (create_db): Add catpath argument. Don't create the database here;
	  let testmandirs do it when needed instead.
	  (update_db): Add catpath argument. Don't create the database
	  directory; either it exists already in which case there's nothing
	  to do, or it's missing in which case there'll be no database to
	  update anyway.
	* src/check_mandirs.h (create_db, update_db): Update prototypes.
	* src/mandb.c (update_db_wrapper): Add catpath argument.
	  (mandb): Update calls to functions that now take the catpath too.
	* src/manp.c (add_mandb_map): Don't create the cat hierarchy here;
	  testmandirs will do it on demand.
	  (mkcatdirs): Make external for use by check_mandirs.c.
	* src/manp.h (mkcatdirs): Add prototype.
	* docs/NEWS: Document this.

Sun Jun 28 16:33:24 BST 2009  Colin Watson  <cjwatson@debian.org>
